runs/github.com/astropy/astropy-tutorials/logs/test-notebook-scripts-tests-test-fail.ipynb-2020-07-03T07.35.txt
[I 200703 07:40:52 inrepo:35] Testing notebook scripts/tests/test-fail.ipynb
[I 200703 07:40:53 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
print 100
------------------

[0;36m  File [0;32m"<ipython-input-5-15ad02aea624>"[0;36m, line [0;32m1[0m
[0;31m    print 100[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(100)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(100)? (<ipython-input-5-15ad02aea624>, line 1)


Container exited with status: {'Error': None, 'StatusCode': 1}
